[package]
authors = ["Cass Fridkin <cass@cloudflare.com>"]
edition = "2018"
name    = "ratmap"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["std"]
std     = []

[dependencies]
amf          = "0.3.1"
async-trait  = "0.1.50"
const-random = "0.1.13"
deku         = "0.12.0"
futures      = "0.3.14"

# client impls
async-std  = { version = "1.9.0", optional = true }
message-io = { version = "0.13.0", optional = true }
tokio      = { version = "1.5.0", features = ["net", "io-util"], optional = true }
