[package]
authors = ["Cass Fridkin <cass@swag.lgbt>"]
edition = "2018"
name    = "ratmap"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]

[dependencies]
dashmap     = "5.4.0"
deku        = "0.15.1"
pin-project = "1.0.12"
rustc-hash  = "1.1.0"
thiserror   = "1"
tokio       = { version = "1", features = ["io-util", "net", "macros"] }
